# atlascloud_comfyui

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  validate.yml
reports/model_sync/: 2026-03-19.md
scripts/: check.sh  generate_nodes_2026_03_07.py
src/atlascloud_comfyui/: registry.py
src/atlascloud_comfyui/client/: atlas_client.py
src/atlascloud_comfyui/nodes/auth/: atlas_client_node.py
src/atlascloud_comfyui/nodes/image/: alibaba_qwen_image_text_to_image_max_t2i.py  alibaba_qwen_image_text_to_image_plus_t2i.py  alibaba_wan_2_1_text_to_image_t2i.py  alibaba_wan_2_5_text_to_image_t2i.py  alibaba_wan_2_6_text_to_image_t2i.py  atlascloud_hidream_i1_dev_t2i.py  atlascloud_hidream_i1_full_t2i.py  atlascloud_hunyuan_image_3_t2i.py  atlascloud_imagen4_t2i.py  atlascloud_neta_lumina_t2i.py  atlascloud_qwen_image_text_to_image_t2i.py  black_forest_labs_flux_1_1_pro_t2i.py  black_forest_labs_flux_1_1_pro_ultra_t2i.py  black_forest_labs_flux_dev_lora_t2i.py  black_forest_labs_flux_dev_lora_ultra_fast_t2i.py  black_forest_labs_flux_dev_t2i.py  black_forest_labs_flux_dev_ultra_fast_t2i.py  black_forest_labs_flux_kontext_max_text_to_image_t2i.py  black_forest_labs_flux_kontext_pro_text_to_image_t2i.py  black_forest_labs_flux_schnell_lora_t2i.py  black_forest_labs_flux_schnell_t2i.py  bytedance_seedream_v3_1_t2i.py  bytedance_seedream_v3_t2i.py  bytedance_seedream_v4_5_sequential_t2i.py  bytedance_seedream_v4_sequential_t2i.py  bytedance_seedream_v4_t2i.py  bytedance_seedream_v5_0_lite_sequential_t2i.py  bytedance_seedream_v5_0_lite_t2i.py  flux2_flex_t2i.py  flux_dev_lora_t2i.py  flux_dev_t2i.py  flux_kontext_dev_edit.py  flux_kontext_dev_lora_edit.py  flux_schnell_t2i.py  google_imagen3_fast_t2i.py  google_imagen3_t2i.py  (+69 more)
tests/: __init__.py  test_atlascloud_comfyui.py  test_e2e.py  test_e2e_new_models.py  test_e2e_new_models_2026_03_07.py  test_e2e_new_models_2026_03_10.py  test_new_nodes_2026_03_03.py  test_new_nodes_2026_03_04.py  test_new_nodes_2026_03_05.py  test_new_nodes_2026_03_06.py  test_new_nodes_2026_03_07.py  test_new_nodes_wan26_kling_o3.py
web/js/: atlas_preview_video.js
(+284 files in other folders)
